--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,9 @@ a {
   font-weight: 700;
   color: #424551;
 }
+.home {
+  padding: 80px 0;
+}
 .home__wrapper {
   display: flex;
   align-items: center;
