fead added stats section

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all 0.3s linear;
 }
 ul,
 ol {
@@ -38,7 +39,18 @@ a {
   letter-spacing: 0.5px;
   color: #f75e05;
 }
+.section__btn2:hover {
+  background-image: linear-gradient(to right, #ff3faf, #f75e05);
+  color: #fff;
+}
+.section__title {
+  font-size: 46px;
+  line-height: 130%;
+  font-weight: 900;
+  color: #1e212c;
+}
 /* header section styles */
+
 .header {
   padding: 20px 0;
 }
@@ -98,4 +110,30 @@ a {
 }
 .home__btn2 {
   margin-right: 16px;
+}
+/* stats section styles */
+.stats {
+  padding: 48px 0;
+}
+.stats__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.starts__item {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.stats__circle {
+  background-color: #ff3f3a;
+  width: 8px;
+  height: 8px;
+  border-radius: 4px;
+}
+.stats__description {
+  font-size: 16px;
+  line-height: 160%;
+  font-weight: 400;
+  color: #1e212c;
 }
