--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,13 @@ a {
   font-weight: 900;
   color: #1e212c;
 }
+/* hero background */
+.hero {
+  background-image: url("../images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+}
 /* header section styles */
 
 .header {
@@ -86,7 +93,7 @@ a {
   color: #424551;
 }
 .home {
-  padding: 80px 0;
+  padding: 112px 0;
 }
 .home__wrapper {
   display: flex;
@@ -107,13 +114,14 @@ a {
   line-height: 130%;
   color: #1e212c;
   letter-spacing: 1px;
+  margin: 40px 0 64px 0;
 }
 .home__btn2 {
   margin-right: 16px;
 }
 /* stats section styles */
 .stats {
-  padding: 48px 0;
+  padding: 112px 0;
 }
 .stats__wrapper {
   display: flex;
